--- a/config/model/vit-b.yaml
+++ b/config/model/vit-b.yaml
@@ -8,10 +8,10 @@ datamodule_eval:
 model_name: "vit-b"
 
 module:
-  _target_: model.vit_mae.ViTMAEForPreTraining
+  _target_: src.model.vit_mae.ViTMAEForPreTraining
 
 pl_module:
-  _target_: model.module.ViTMAE
+  _target_: src.model.module.ViTMAE
   base_learning_rate: 1.5e-4
   betas: [0.9, 0.95]
   weight_decay: 0.05
