--- a/config/model/vit-t.yaml
+++ b/config/model/vit-t.yaml
@@ -1,12 +1,12 @@
 # @package _global_
 
 module:
-  _target_: model.vit_mae.ViTMAEForPreTraining
+  _target_: src.model.vit_mae.ViTMAEForPreTraining
 
 model_name: "vit-t"
 
 pl_module:
-  _target_: model.module.ViTMAE
+  _target_: src.model.module.ViTMAE
   base_learning_rate: 1.5e-4
   betas: [0.9, 0.95]
   weight_decay: 0.05
