--- a/config/trainer/eval_fine.yaml
+++ b/config/trainer/eval_fine.yaml
@@ -11,7 +11,7 @@ evaluator:
   max_epochs: 100
 
 pl_module_eval:
-  _target_: model.module_fine.ViTMAE_fine
+  _target_: src.model.module_fine.ViTMAE_fine
   base_learning_rate: 0.001
   betas: [0.9,0.999]
   weight_decay: 0.05
