--- a/config/trainer/eval_knn.yaml
+++ b/config/trainer/eval_knn.yaml
@@ -11,7 +11,7 @@ evaluator:
   max_epochs: 1
 
 pl_module_eval:
-  _target_: model.module_knn.ViTMAE_knn
+  _target_: src.model.module_knn.ViTMAE_knn
   evaluated_epoch: ${evaluated_epoch}
   k:
     _target_: numpy.arange
