--- a/config/trainer/eval_lin.yaml
+++ b/config/trainer/eval_lin.yaml
@@ -11,7 +11,7 @@ evaluator:
   max_epochs: 100
 
 pl_module_eval:
-  _target_: model.module_lin.ViTMAE_lin
+  _target_: src.model.module_lin.ViTMAE_lin
   base_learning_rate: 0.1
   betas: 0.9
   weight_decay: 0
