--- a/config/trainer/eval_transfert_fine.yaml
+++ b/config/trainer/eval_transfert_fine.yaml
@@ -11,7 +11,7 @@ evaluator:
   max_epochs: 100
 
 pl_module_eval:
-  _target_: model.module_transfert_fine.ViTMAE_transfert_fine
+  _target_: src.model.module_transfert_fine.ViTMAE_transfert_fine
   base_learning_rate: 0.1
   betas: 0.9
   weight_decay: 0
